SCAP2022-146 // remove ITT participant used later in the SCAP (#203)
* added test coverage

* added missing test coverage

* added test coverage

* added removal of ITT participants that are used later in actual contract awards and/or contracting performance

* fixed tests

* added deletion of contracting performance and awarded contract when ITT recipient is removed or Contract stage is changed from contract awarded

* allowed tests to pass

* Added tests

* Added coverage for when preferred bidder is not removed